# klipperesp32

./: .gitignore  CMakeLists.txt  README.en.md  README.md  platformio---.ini  sdkconfig  sdkconfig.defaults  sdkconfig.old
boards/: marlin_esp32s3.json  marlin_esp32s3_16m.json
embedded/: build.bat  header.txt  package-lock.json
embedded/www/: tool.html
embedded/www/css/: style.css
embedded/www/js/: script.js
ini/: features.ini
script/: klipperuart.sh  pipe.c  printer.cfg
src/: CMakeLists.txt  autoconf.h  compile_time_request.c
src/board/: gpio.h  internal.h  serial_irq.c
src/esp32/: 74hc595.c  74hc595.h  HAL.c  HAL.h  adc.c  esp32-hal-ledc.c  fastio.h  gpio.c  i2c.c  main.c  pwm.c  serial copy 2.c  serial copy.c  serial.c  serialwifi copy.c  serialwifi.c  serialwifi.h  spi.c  timer.c  watchdog.c
