idf_component_register(SRCS "esp32/main.c"
                    "esp32/HAL.c"
                    "esp32/watchdog.c"
                    "compile_time_request.c"
                    "sched.c" "command.c" "basecmd.c" "debugcmds.c"
                    "initial_pins.c" "gpiocmds.c" "stepper.c" "endstop.c" "trsync.c"
                    "adccmds.c"
                    "spicmds.c" "thermocouple.c"
                    "i2ccmds.c"
                    "i2c_software.c"
                    "pwmcmds.c"
                    "spi_software.c" "sensor_adxl345.c" "sensor_angle.c"
                    "sensor_mpu9250.c"
                    "lcd_st7920.c" "lcd_hd44780.c" "buttons.c" "tmcuart.c" "neopixel.c" "pulse_counter.c"
                    "esp32/timer.c"
                    "esp32/serial.c" 
                    "esp32/serialwifi.c"
                    "esp32/gpio.c" "esp32/74hc595.c"
                    "esp32/adc.c"
                    "esp32/spi.c"
                    "esp32/i2c.c"
                    "esp32/pwm.c"
                    "esp32/esp32-hal-ledc.c"
                    "board/alloc.c"
                    "board/crc16_ccitt.c"
                    "board/serial_irq.c"
                    "board/timer_irq.c"

                    # SRC_DIRS "board/*"
                    INCLUDE_DIRS "."
                    "esp32"
                    REQUIRES driver
                    REQUIRES "esp_adc_cal"
                    REQUIRES "nvs_flash"
                    )
                    # set(COMPONENT_PRIV_REQUIRES main nvs_flash app_update)